Added better error handling for sign-up transaction.

--- a/app/views/membership_error.scala.html
+++ b/app/views/membership_error.scala.html
@@ -1,3 +1,5 @@
+@(error: String)
+
 @*
 * Membership error. Should be shown for internal server errors. Should not be shown for form validation issues.
 *@
