Added test for menu button highlighting.

--- a/app/views/alt.scala.html
+++ b/app/views/alt.scala.html
@@ -1,9 +1,9 @@
-@(form: Form[Member])
+@(form: Form[Member])(implicit messages: Messages, request: play.api.mvc.Request[Any])
 
 @*
 * Shows the main intro page with alternative sign-up form (e-mail rather than phone number).
 *@
-@main("Sign-up") {
+@main("Sign-up", request) {
 <div class="jumbotron">
     <h1>Freshers Sign-up</h1>
     <p class="lead">Hey!</p>
