--- a/app/views/membership_thank_you.scala.html
+++ b/app/views/membership_thank_you.scala.html
@@ -1,6 +1,8 @@
+@()(implicit request: play.api.mvc.Request[Any])
+
 @*
  * Base off of main template. Show simple thank you message and return to main form button.
  *@
-@main("Thanks") {
+@main("Thanks", request) {
 Thank you!
 }
