Made request implicit where possible.

--- a/app/views/alt.scala.html
+++ b/app/views/alt.scala.html
@@ -3,7 +3,7 @@
 @*
 * Shows the main intro page with alternative sign-up form (e-mail rather than phone number).
 *@
-@main("Sign-up", request) {
+@main("Sign-up") {
 <div class="jumbotron">
     <h1>Freshers Sign-up</h1>
     <p class="lead">Hey!</p>
