--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,7 +3,7 @@
 @*
  * Shows the main intro page with sign-up form.
  *@
-@main("Sign-up", request) {
+@main("Sign-up") {
   <div class="jumbotron">
     <h1>Freshers Sign-up</h1>
     <p class="lead">Hey!</p>
