--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,7 +1,7 @@
 @*
  * Primary layout.
  *@
-@(title: String, request: play.api.mvc.Request[Any])(content: Html)
+@(title: String)(content: Html)(implicit request: play.api.mvc.Request[Any])
 <!DOCTYPE html>
 <html lang="en">
   <head>
