--- a/app/views/membership_thank_you.scala.html
+++ b/app/views/membership_thank_you.scala.html
@@ -3,6 +3,6 @@
 @*
  * Base off of main template. Show simple thank you message and return to main form button.
  *@
-@main("Thanks", request) {
+@main("Thanks") {
 Thank you!
 }
