--- a/app/views/alt.scala.html
+++ b/app/views/alt.scala.html
@@ -24,7 +24,7 @@
         }
       </div>
       <div class="form-group">
-        @helper.input(form("email"), '_label -> "E-mail") { (id, name, value, args) =>
+        @helper.input(form("email"), '_label -> "E-mail address") { (id, name, value, args) =>
         <input type="text" class="form-control" id="@id" name="@name" placeholder="Your main e-mail address, not the uni one please." @toHtmlArgs(args)>
         }
       </div>
