--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[Member])(implicit messages: Messages, request: play.api.mvc.Request[Any])
+@(form: Form[Member], altForm: Boolean)(implicit messages: Messages, request: play.api.mvc.Request[Any])
 
 @*
  * Shows the main intro page with sign-up form.
@@ -17,17 +17,25 @@
     }
 
     <p>
-      @helper.form(action = routes.MembershipController.signup()) {
+      @helper.form(action = (if (altForm) routes.MembershipController.signupAlt() else routes.MembershipController.signup())) {
         <div class="form-group">
           @helper.input(form("name"), '_label -> "Name") { (id, name, value, args) =>
             <input type="text" class="form-control" id="@id" name="@name" placeholder="Name" @toHtmlArgs(args)>
           }
         </div>
-        <div class="form-group">
-          @helper.input(form("phoneNumber"), '_label -> "Phone number") { (id, name, value, args) =>
-            <input type="text" class="form-control" id="@id" name="@name" placeholder="Mobile number, e.g. 07123123123" @toHtmlArgs(args)>
-          }
-        </div>
+        @if(altForm) {
+          <div class="form-group">
+            @helper.input(form("email"), '_label -> "E-mail address") { (id, name, value, args) =>
+            <input type="text" class="form-control" id="@id" name="@name" placeholder="Your main e-mail address, not the uni one please." @toHtmlArgs(args)>
+            }
+          </div>
+        } else {
+          <div class="form-group">
+            @helper.input(form("phoneNumber"), '_label -> "Phone number") { (id, name, value, args) =>
+              <input type="text" class="form-control" id="@id" name="@name" placeholder="Mobile number, e.g. 07123123123" @toHtmlArgs(args)>
+            }
+          </div>
+        }
         <button type="submit" class="btn btn-lg btn-success">Sign me up!</button>
       }
     </p>
