--- a/assets/stylesheets/application.sass
+++ b/assets/stylesheets/application.sass
@@ -13,3 +13,24 @@ body
   .container
     max-width: 730px;
 
+#intro-header
+  text-align: center
+
+  img
+    width: 75%
+
+footer
+  text-align: center
+  color: #666
+  font-size: 0.9em
+
+#sign-up-form
+  dd.info
+    display: none
+
+  dd.error
+    @extend .label
+    @extend .label-danger
+    padding: 0.5em
+    margin-top: 0.5em
+    display: inline-block
