Improved main page styling.

--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -53,5 +53,6 @@
     <script>window.jQuery || document.write('<script src="@routes.Assets.versioned("javascripts/jquery.min.js")"><\/script>')</script>
     <script src="@routes.Assets.versioned("javascripts/vendor.min.js")"></script>
     <script src="@routes.Assets.versioned("javascripts/app.min.js")"></script>
+    <style type="text/css">body { background: url(@routes.Assets.versioned("images/bg-tile.png")) repeat; }</style>
   </body>
 </html>
