--- a/assets/stylesheets/application.sass
+++ b/assets/stylesheets/application.sass
@@ -9,6 +9,10 @@ body, input
 body
   padding-top: 1.5em
 
+  .jumbotron
+     background-color: #fff;
+     border: solid 0.2em #c0edff;
+
 @media (min-width: 768px)
   .container
     max-width: 730px;
