Added a proper thank you page.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -63,6 +63,12 @@ h1
   label
     font-size: 2rem
 
+#giphy-link
+  font-size: 0.5em
+
+#go-back-btn
+  @extend button
+
 footer
   text-align: center
   color: #666
