--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -21,6 +21,14 @@ body
     @include span-columns(6)
     @include shift(3)
 
+    @media(max-width: 65em)
+      @include span-columns(8)
+      @include shift(2)
+
+    @media(max-width: 55em)
+      @include span-columns(12)
+      @include shift(0)
+
 nav
   text-align: right
 
@@ -41,6 +49,9 @@ h1
   border: solid 0.2em $lsd-blue
   border-radius: 0.5em
   background: white
+
+  @media(max-width: 55em)
+    padding: 1em
 
 #intro-header
   text-align: center
