Made header and navbar responsive.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -41,8 +41,15 @@ nav
       a
         color: white
 
+  @media(max-width: 45em)
+    ul
+       margin-bottom: 1em
+
 h1
   margin: -1.5em 0 1.4em 0
+
+  @media(max-width: 45em)
+     display: none
 
 #intro-hero
   padding: 2em
