--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(form: Form[Tables.Member], altForm: Boolean)(implicit messages: Messages, request: play.api.mvc.Request[Any])
+@(form: Form[CaseClassMappings.Member], altForm: Boolean)(implicit messages: Messages, request: play.api.mvc.Request[Any])
 
 @*
  * Shows the main intro page with sign-up form.
