Added a proper (translatable) error message for signing up.

--- a/app/views/membership_error.scala.html
+++ b/app/views/membership_error.scala.html
@@ -12,7 +12,7 @@
   <h2>Uh-oh!</h2>
 
   <p class="error-message">
-    @error
+    @Messages(error)
   </p>
 
   <a id="go-back-btn" href="javascript:history.go(-1)">Go back...</a>
