Moved logo to the header - looks better on laptops.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -61,9 +61,6 @@ nav
     ul
        margin-bottom: 1em
 
-h1
-  margin: -1.5em 0 1.4em 0
-
   @media(max-width: 45em)
      display: none
 
@@ -76,11 +73,9 @@ h1
   @media(max-width: 55em)
     padding: 1em
 
-#intro-header
-  text-align: center
-
-  img
-    width: 75%
+#logo
+  width: 25%
+  margin: -3.25em 0 1.2em 0
 
 #sign-up-form
   dd.info
