--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -32,7 +32,7 @@
             </li>
           </ul>
         </nav>
-        <h1>Leeds University Skydivers</h1>
+        <img id="logo" src="@routes.Assets.versioned("images/header.png")" title="Leeds University Skydivers" alt="Leeds University Skydivers logo">
       </div>
 
       @content
