--- a/app/views/admin/main.scala.html
+++ b/app/views/admin/main.scala.html
@@ -21,7 +21,7 @@
 
   <body role="document">
     <div id="admin-container">
-      <div>
+      <div id="nav-container">
         <nav>
           <ul>
             <li role="presentation" class="@("active".when(request.path == "/admin"))">
