--- a/app/views/membership_thank_you.scala.html
+++ b/app/views/membership_thank_you.scala.html
@@ -9,8 +9,14 @@
 
    <p>Are you excited for skydiving? I AM :D</p>
 
-  <iframe src="//giphy.com/embed/dkGhBWE3SyzXW" width="480" height="360" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-  <p id="giphy-link"><a href="https://giphy.com/gifs/excited-dancing-dkGhBWE3SyzXW">via GIPHY</a></p>
+  <div class="video">
+    <div class="video-wrapper">
+        <video autoplay loop>
+          <source src="@routes.Assets.versioned("videos/hell-yeah.mp4")" type="video/mp4"></source>
+          * Insert happy dancing GIF here *
+        </video>
+    </div>
+  </div>
 
   <a id="go-back-btn" href="@routes.MembershipController.index()">Go back...</a>
 </div>
