--- a/app/views/admin/index.scala.html
+++ b/app/views/admin/index.scala.html
@@ -43,7 +43,7 @@
 
     <ul id="settings">
       <li>
-        <a href="#"><i class="fa fa-commenting-o" aria-hidden="true"></i> Welcome text</a>
+        <a href="@routes.AdminController.settings"><i class="fa fa-commenting-o" aria-hidden="true"></i> Welcome text</a>
         <a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Setting B</a>
         <a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Setting C</a>
         <a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Setting D</a>
