--- a/app/assets/stylesheets/base/_lists.scss
+++ b/app/assets/stylesheets/base/_lists.scss
@@ -17,3 +17,15 @@ dt {
 dd {
   margin: 0;
 }
+
+ul.list li {
+  list-style-type: disc;
+}
+
+ul.list ol {
+  list-style-type: decimal;
+}
+
+ul.list li, ul.list ol {
+  margin-left: 1.5em;
+}
