Small style tweaks for the member view.

--- a/app/views/admin/member_view.scala.html
+++ b/app/views/admin/member_view.scala.html
@@ -8,7 +8,7 @@
   <div id="full-column">
     <h2>Member view</h2>
 
-    <dl>
+    <dl id="member-details">
       <dt>Name</dt>
       <dd>@member.name</dd>
 
