--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -71,6 +71,10 @@ footer
   color: #666
   font-size: 0.9em
 
+hr
+  border: solid 0.07em #eee
+  margin: 0.4em 0
+
 #stats
   border: solid 0.05em #ccc
 
@@ -108,3 +112,23 @@ footer
 
   dd
     padding: 0.3em 0 0.3em 0.6em
+
+#member-text-messages
+  li
+    padding: 0.5em
+    background: lighten($lsd-blue, 30%)
+    margin-bottom: 1em
+
+  dl
+    padding: 0.5em
+    border-bottom: solid 0.1em lighten($lsd-blue, 20%)
+    margin-bottom: 1em
+
+  dt, dd
+    display: inline-block
+
+  dt:after
+    content: ':'
+
+  dd
+    margin-right: 1em
