Small cleanups. Added default welcome message to translations.

--- a/app/views/admin/settings.scala.html
+++ b/app/views/admin/settings.scala.html
@@ -1,4 +1,4 @@
-@(settingsForm: Form[String], savedWelcomeTextMessage: String)(implicit messages: Messages, request: play.api.mvc.Request[Any])
+@(settingsForm: Form[String])(implicit messages: Messages, request: play.api.mvc.Request[Any])
 
 @*
 * Shows the main admin overview screen.
