--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -28,7 +28,7 @@
               <a href="@routes.MembershipController.index">Main</a>
             </li>
             <li role="presentation" class="@("active".when(request.path == "/alt" || request.path == "/sign-up-alt"))">
-              <a href="@routes.MembershipController.alt">Alt</a>
+              <a href="@routes.MembershipAltController.index">Alt</a>
             </li>
           </ul>
         </nav>
