--- a/app/views/admin/course_calendar.scala.html
+++ b/app/views/admin/course_calendar.scala.html
@@ -1,4 +1,5 @@
-@()(implicit messages: Messages, request: play.api.mvc.Request[Any])
+@import helpers.CalendarHelper.CalendarTile
+@(tiles: Seq[CalendarTile])(implicit messages: Messages, request: play.api.mvc.Request[Any])
 
 @*
 * Shows one static line course.
@@ -7,6 +8,39 @@
   <div id="full-column">
     <h2>Static line course calendar</h2>
 
+    <div id="sl-course-calendar">
+      @for(tile <- tiles) {
+        @tile match {
+          case x if (tile.isPreviousMonth || tile.isNextMonth) => {
+            <a href="#" class="sl-course-calendar-tile tile-other-month">
+            }
+          case x if(tile.isToday) => {
+            <a href="#" class="sl-course-calendar-tile tile-today">
+            }
+          case _ => {
+            <a href="#" class="sl-course-calendar-tile">
+            }
+        }
+        <span class="sl-course-calendar-tile-day">@tile.date.dayOfMonth().get()</span>
 
+        @*
+        * You can chain calls to Math.random() together like this, right? Right????
+        *@
+        @if(Math.random() >= 0.2 && Math.random() <= 0.3) {
+          <div class="sl-course-calendar-tile-info course-full">
+            0 Spaces
+          </div>
+        } else {
+          @if(Math.random() >= 0.6 && Math.random() <= 0.7) {
+            <div class="sl-course-calendar-tile-info course-spaces">
+              7 Spaces
+            </div>
+          }
+        }
+      </a>
+      }
+
+      <div class="clear"></div>
+    </div>
   </div>
 }
