--- a/app/views/admin/course_calendar.scala.html
+++ b/app/views/admin/course_calendar.scala.html
@@ -28,12 +28,12 @@
         *@
         @if(Math.random() >= 0.2 && Math.random() <= 0.3) {
           <div class="sl-course-calendar-tile-info course-full">
-            0 Spaces
+            0 <span class="course-word-spaces">Spaces</span>
           </div>
         } else {
           @if(Math.random() >= 0.6 && Math.random() <= 0.7) {
             <div class="sl-course-calendar-tile-info course-spaces">
-              7 Spaces
+              7 <span class="course-word-spaces">Spaces</span>
             </div>
           }
         }
