Added the tile's date to the link title.

--- a/app/views/admin/course_calendar.scala.html
+++ b/app/views/admin/course_calendar.scala.html
@@ -1,10 +1,13 @@
 @import helpers.CalendarHelper.CalendarTile
-@(tiles: Seq[CalendarTile])(implicit messages: Messages, request: play.api.mvc.Request[Any])
+@import org.joda.time.format.DateTimeFormat
+@import org.joda.time.format.DateTimeFormatter
+@(tiles: Seq[CalendarTile], dateFormatter: DateTimeFormatter = DateTimeFormat.forPattern("dd/MM/yyyy"))(implicit messages: Messages, request: play.api.mvc.Request[Any])
 
 @*
 * Shows one static line course.
 *@
 @admin.main("Course calendar") {
+
   <div id="full-column">
     <h2>Static line course calendar</h2>
 
@@ -12,13 +15,13 @@
       @for(tile <- tiles) {
         @tile match {
           case x if (tile.isPreviousMonth || tile.isNextMonth) => {
-            <a href="#" class="sl-course-calendar-tile tile-other-month">
+            <a href="#" class="sl-course-calendar-tile tile-other-month" title="@tile.date.toString(dateFormatter)">
             }
           case x if(tile.isToday) => {
-            <a href="#" class="sl-course-calendar-tile tile-today">
+            <a href="#" class="sl-course-calendar-tile tile-today" title="@tile.date.toString(dateFormatter)">
             }
           case _ => {
-            <a href="#" class="sl-course-calendar-tile">
+            <a href="#" class="sl-course-calendar-tile" title="@tile.date.toString(dateFormatter)">
             }
         }
         <span class="sl-course-calendar-tile-day">@tile.date.dayOfMonth().get()</span>
@@ -27,12 +30,12 @@
         * You can chain calls to Math.random() together like this, right? Right????
         *@
         @if(Math.random() >= 0.2 && Math.random() <= 0.3) {
-          <div class="sl-course-calendar-tile-info course-full">
+          <div class="sl-course-calendar-tile-info course-full" title="0 Spaces left on this course">
             0 <span class="course-word-spaces">Spaces</span>
           </div>
         } else {
           @if(Math.random() >= 0.6 && Math.random() <= 0.7) {
-            <div class="sl-course-calendar-tile-info course-spaces">
+            <div class="sl-course-calendar-tile-info course-spaces" title="7 Spaces left on this course">
               7 <span class="course-word-spaces">Spaces</span>
             </div>
           }
