Added a rough date filter.

--- a/app/assets/stylesheets/admin/_static_line_course_calendar.sass
+++ b/app/assets/stylesheets/admin/_static_line_course_calendar.sass
@@ -56,3 +56,13 @@ $today-colour: #cae8ff
   @include media(max-width 50em)
     .course-word-spaces
       display: none
+
+#sl-course-calendar-filter
+  padding: 0.2em
+  margin: 1em 0
+
+  dl, dt, dd, button
+    display: inline-block
+
+  button
+    padding: 0.3em
