--- a/app/views/admin/course_calendar.scala.html
+++ b/app/views/admin/course_calendar.scala.html
@@ -13,21 +13,29 @@
   <div id="full-column">
     <h2>Static line course calendar</h2>
 
-    <div id="sl-course-calendar-filter">
-      <form action="@routes.CourseController.index()" method="get">
-        <dl>
-          <dt><label for="calendar-filter-month">Month</label></dt>
-          <dd>
-            <select id="calendar-filter-month" name="calendar-filter-month">
-              @for(offset <- 1 to 36) {
-                <option value="0">@{startDate.plus(Period.months(offset)).toString("yyyy - MMMM")}</option>
-              }
-            </select>
-          </dd>
-        </dl>
+    <div id="sl-course-calendar-navigation">
+      <div id="sl-course-calendar-nav-left">
+        <a href="#"><i class="fa fa-arrow-circle-left"></i></a>
+      </div>
 
-        <button type="submit">View</button>
-      </form>
+      <div id="sl-course-calendar-filter">
+        <form action="@routes.CourseController.index()" method="get">
+          <label for="calendar-filter-month">Month</label>
+          <select id="calendar-filter-month" name="calendar-filter-month">
+            @for(offset <- 1 to 36) {
+              <option value="0">@{startDate.plus(Period.months(offset)).toString("yyyy - MMMM")}</option>
+            }
+          </select>
+
+          <button type="submit">View</button>
+        </form>
+      </div>
+
+      <div id="sl-course-calendar-nav-right">
+        <a href="#"><i class="fa fa-arrow-circle-right"></i></a>
+      </div>
+
+      <div class="clear"></div>
     </div>
 
     <div id="sl-course-calendar">
